<resources>
    <string name="app_name">Certamen Android</string>
    <string name="action_settings">Settings</string>
    <string name="numRight">N1</string>
    <string name="operador">?</string>
    <string name="numLeft">N2</string>
    <string name="generar_num">GENERAR NÚMEROS</string>
    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnMultiplica">X</string>
    <string name="btnDividir">/</string>
    <string name="resultado_par">¿RERSULTADO ES PAR?</string>
    <string name="resultado_primo">¿RESULTADO ES PRIMO?</string>
    <string name="resultado">RESULTADO</string>
    <string name="btnC">C</string>



</resources>
